syntax = "proto3";

package def.constants;

option java_package = "com.message.matching_room.proto";
option java_outer_classname = "MethodDef";

enum MATCHING_ROOM_METHODS {
    CREATE_ROOM = 0;

}